Updated the Units CSV file with massively improved handling of the Centurion/Tarsus/Galaxy and Orion.

--- a/vegastrike.config
+++ b/vegastrike.config
@@ -429,6 +429,7 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
         </colors>
 	<variables>
 		<section name="data">
+            <var name="datadir" value="/home/james/Project/Privateer_Gold"/>
 			<var name="UnitCSV" value="units.csv"/>
 <!-- #easy easier
 			<var name="ai_directory" value="ai.easy"/>
@@ -760,6 +761,7 @@ This is done many times later in this config file
 <!-- #Retro
 			<var name="UseTextures" value="false"/>
 			<var name="UseAnimations" value="true"/>
+			<var name="UseVideos" value="true"/>
 			<var name="UseSprites" value="true"/>
 			<var name="UseLogos" value="false"/>
 #end -->
@@ -1436,7 +1438,8 @@ This is done many times later in this config file
 			<var name="gun_speed" value=".1"/> <!-- privateer -->
 			<var name="insystem_jump_cost" value="0"/> <!-- privateer -->
 			<var name="star_system_scale" value=".285"/>
-			<var name="game_speed" value=".1"/> <!-- changes how fast all ships move compared to what is written, wing commander had a game speed of .1 that means "clicks" = 1/10 of a meter -->
+<!--			<var name="game_speed" value="0.1"/> changes how fast all ships move compared to what is written, wing commander had a game speed of .1 that means "clicks" = 1/10 of a meter -->
+			<var name="game_speed" value="1"/> <!-- changes how fast all ships move compared to what is written, wing commander had a game speed of .1 that means "clicks" = 1/10 of a meter -->
 			<var name="game_accel" value="1"/> <!-- game_accel changes how fast ships accelerate when they turn, how easy you can do an afterburner slide - low number = more sliding for the player -->
 			<var name="planet_ejection_stophack" value="200"/> <!-- privateer -->
 			<var name="FuelUsage" value="0"/> <!-- privateer -->
